legacy/v1.1.10-beta/README.zh-CN.md
# B站屏蔽助手 · BiliTitleFilter

> B站视频标题屏蔽助手 —— 一个按标题屏蔽词过滤 B 站视频的浏览器扩展。

[![version](https://img.shields.io/badge/version-1.1.10--beta-orange)](https://github.com/ke25019/bili-title-filter/releases)
[![manifest](https://img.shields.io/badge/Manifest-V3-blue)]()
[![browser](https://img.shields.io/badge/Edge%20%7C%20Chrome-Chromium-00aeec)]()
[![tests](https://img.shields.io/badge/tests-172%20passed-brightgreen)]()

一个适用于 **Microsoft Edge / Chrome 等 Chromium 浏览器** 的 B 站网页端扩展（Manifest V3）。
按你自己添加的**视频标题屏蔽词**屏蔽视频：可以整体遮蔽（封面与标题合并成一块提示区域，鼠标悬停即可查看），
也可以直接隐藏；另外支持按分区屏蔽直播、番剧等推广内容，并可单独屏蔽首页顶部的轮播横幅。

---

## ⚠️ Beta 说明

当前版本为 **v1.1.10-beta**，功能完整可用，但仍处于测试阶段，欢迎反馈问题。

- 自动化校验：核心屏蔽逻辑 100 项、设置界面 52 项、后台服务 20 项，**共 172 项全部通过**。
- **本版的核心原则：宁可不屏蔽，也绝不乱遮**。任何一步无法确认是一张卡片时，扩展会直接跳过该推广，不影响页面其它内容。
- 已知限制：B 站页面结构改版后，个别卡片的识别可能需要调整（见文末「常见问题」）。
- 反馈渠道：请在 [Issues](https://github.com/ke25019/bili-title-filter/issues) 中提交，附上页面地址与截图更好定位。
- 旧版本（v1.0.0-beta / v1.1.0-beta / v1.1.3-beta / v1.1.4-beta / v1.1.5-beta / v1.1.6-beta / v1.1.7-beta）已归档在 [`legacy/`](legacy/) 目录，可分别作为独立扩展加载。

---

## 功能一览

### 1. 标题屏蔽词屏蔽视频
- 支持批量添加 / 删除屏蔽词，多个屏蔽词之间是「或」的关系。
- 匹配规则可选：**区分大小写**、**正则表达式**、**同时匹配 UP 主名称**。
- 改动立即生效，所有已打开的 B 站页面自动重新扫描。

### 2. 两种屏蔽方式

| 方式 | 效果 |
| --- | --- |
| **整体遮蔽** | 把**封面 + 标题合成一整块区域**并显示「根据您的屏蔽词已将此视频屏蔽」，页面布局保持不变；**鼠标悬停时自动展示该视频**，移开鼠标自动恢复屏蔽。 |
| **完全隐藏** | 让视频不再显示。默认**保留原来的位置**（与 v1.0.0-beta 一致）：只隐藏卡片内容，页面不重排、不变短，也不会把 B 站末尾的空骨架占位块顶到内容中间；也可以在面板里关掉「隐藏时保留原位置」，让卡片整个从布局移除、后面的内容前移补位。 |

- 遮蔽文案可自定义（设置页 → 屏蔽方式 → 遮蔽区域文案）。
- 悬停自动展示可以关闭；关闭后遮蔽区域会拦截点击，避免误点进被屏蔽的视频。

### 3. 屏蔽分区推广（卡片级）

勾选后，这些分区的推广卡片会与你屏蔽的视频**完全一样地处理**：封面与标题合并成一整块，不会出现"只遮封面、标题还露在外面"的情况。

可屏蔽的分区（**共 14 类**，按实测的 B 站真实域名 / 路径整理）：

| 标签 | 覆盖范围 |
| --- | --- |
| 直播 | `live.bilibili.com` 直播卡片与直播推广位 |
| 番剧 | `/bangumi/`、`/anime/`、`/guochuang/`（含顶部轮播与追番推广位） |
| 影视 | `/movie/`、`/tv/`、`/documentary/`、`/variety/` |
| 课堂 | `/cheese/` 付费课程 |
| 专栏 | `/read/` 图文 |
| 动态 | `/opus/`、`t.bilibili.com` |
| 漫画 | `manga.bilibili.com`、`/manga/` |
| 游戏 | `game.bilibili.com`、`/v/game` |
| 音乐 | `music.bilibili.com`、`/audio/` |
| 赛事 | `/match/`、`/esports/` |
| 会员购 | `love.bilibili.com`、`show.bilibili.com`、`/mall/` |
| 活动 | `/blackboard/`、`/festival/`、`/topic/`、`/platform/` |
| 广告 | `cm.` / `ad.bilibili.com` 及带"广告"标识的卡片 |
| **其他推广** | **兜底**：跳往站内其它频道、客户端下载（`app.` / `m.bilibili.com`）或站外链接的推广卡片 |

> 「其他推广」是兜底开关，只在该卡片**没有命中上面任何一个具体分区**时才生效。
> 因此关掉「直播」不会又被兜底规则抓回来。

**识别方式不依赖单一 class，且全部结论来自真实浏览器实测（Edge 152 + CDP）：**

1. 先看卡片内的链接指向哪里（`live.bilibili.com` / `/bangumi/play/` / `/cheese/play/` ……）
2. 已知卡片类名优先（`.feed-card`、`.bili-video-card`、`.bili-feed-card` 等）
3. B 站部分区域用 BEM 命名，会把 `bili-live-card__image--link` 这类子元素回推到卡片根 `.bili-live-card`
4. 都不是时，**向上找到第一层同时包含「标题」与「封面」的元素**作为卡片本体 —— 这样遮蔽区域天然覆盖封面 + 标题
5. 顶栏导航区域与隐藏的侧边推广位（`.header-channel`、`.palette-button-inner`）被明确排除
6. **三重安全阀**：容器内部还装着别的卡片 → 判定为列表而放弃；尺寸超过 1100×700 或视口面积的 15% → 放弃；隐藏的 0 尺寸元素 → 放弃

### 4. 屏蔽首页顶部轮播横幅（独立开关）

只隐藏首页最上方那个会自动切换的大轮播图（实测结构：`.vui_carousel` 包裹 11 个 `.carousel-area` 幻灯片，位于页顶 header 之下），
**不涉及其它页面、不影响其它内容**。它是一个单独的开关，与上面的分区勾选互不影响。

### 5. 完全隐藏模式下的"空占位块"处理

B 站的推荐流网格末尾放着若干**只含骨架屏的空占位项**，等你往下滚动时才会填入真实内容。
一旦我们把前面的卡片隐藏掉，CSS Grid 就会把这些空占位项**拉到前面来填空**，看起来就是内容中间多出一块块灰色空盒。

扩展现在会自动处理这一点：在完全隐藏模式下，把被顶上来的空占位项一并收敛掉
（普通空占位直接隐藏；`.load-more-anchor` 这类加载哨兵只做隐身、保留布局盒，确保 B 站仍能继续加载内容）。
占位项一旦被真实内容填充，会立刻自动恢复显示。实测：可见骨架屏数量 89 → 18（剩下的都在左上角轮播块内部，属于真实内容），
并且滚动到底部后 B 站仍能正常加载新内容。

### 6. 三处调节入口
- **扩展弹窗**：点击工具栏图标，快速开关与增删屏蔽词。
- **完整设置页**：分区屏蔽表格、效果预览、配置导入导出、统计与重置。
- **B 站页面内悬浮面板**：位于标题栏附近，**按住即可拖动**到任意位置，位置会自动记住（可一键重置），点一下展开设置面板。

### 7. 深色模式适配
- 遮蔽区域与页面内面板会自动跟随 B 站 web 端的深色模式。
- 检测方式：`<html>` 的 `dark` 属性 / `data-theme` / class，并以上下文背景色亮度作为兜底判断。
- 也可手动指定「始终浅色 / 始终深色」。

### 8. 其它
- 工具栏徽标显示今日屏蔽数量，累计 / 今日统计可在设置页查看与重置。
- 配置支持**导出 / 导入 JSON**，方便备份与多机同步。
- 设置存放在 `chrome.storage.sync`，登录浏览器账号时可跨设备同步。
- 注入的 UI 全部使用 **Shadow DOM + `bf-` 前缀类名**，不会污染或破坏 B 站自身样式。

---

## 安装方法（Microsoft Edge）

**方式一：下载压缩包（推荐）**

1. 打开 [Releases 页面](https://github.com/ke25019/bili-title-filter/releases)，下载最新版本的 `bili-title-filter-vX.Y.Z-beta.zip`。
2. 解压到任意目录（不要删除解压后的文件夹）。
3. 打开 Edge，地址栏输入 `edge://extensions/` 回车，打开左下角的 **「开发人员模式」**。
4. 点击 **「加载解压缩的扩展」**，选择解压出来的文件夹（含 `manifest.json` 的那一层）。

**方式二：克隆仓库**

```bash
git clone https://github.com/ke25019/bili-title-filter.git
```

然后按上面的第 3、4 步加载仓库目录。

> Chrome 用户同理：`chrome://extensions/` → 开发者模式 → 加载已解压的扩展程序。

---

## 使用说明

1. 点击浏览器工具栏的扩展图标，或点击 B 站页面标题栏附近的「屏蔽助手」按钮。
2. 在「标题屏蔽词」输入框中输入你想屏蔽的关键词（回车添加）。例如：
   - `剧透`
   - `营销号`
   - `标题党`
   - 开启正则后可使用 `^\s*【.*?】`、`(合集|盘点)\s*第?\d+` 等高级规则。
3. 在「屏蔽方式」中二选一：**整体遮蔽**（可悬停查看）或 **完全隐藏**。
4. 需要过滤分区推广时，在「屏蔽分区推广」中勾选分区；**只想干掉首页顶部那个大轮播图**，就单独打开「屏蔽首页顶部轮播横幅」开关。
5. 悬浮按钮**按住可以拖到任意位置**，位置会自动保存；在面板底部点「重置位置」可回到默认停靠点。
6. 更多精细选项（14 类分区逐个开关、轮播横幅、正则、UP 主匹配、文案自定义、导入导出、统计）在 **完整设置** 页中调整。

### 支持的页面
首页推荐、搜索页、分区页、排行榜、播放页右侧相关推荐、动态页等常见视频列表页。

---

## 目录结构

```
bili-title-filter/
├── manifest.json          # MV3 清单
├── background.js          # Service Worker：统计、徽标、默认值、打开设置页
├── shared/
│   └── defaults.js        # 共享默认配置 + 分区类型定义（含识别规则）
├── content/
│   ├── content.js         # 内容脚本：扫描/匹配/屏蔽 + 分区识别 + 可拖动悬浮面板
│   └── content.css        # 注入样式：遮蔽区域、悬停展示、横幅隐藏、深色模式变量
├── popup/                 # 工具栏弹窗（快捷设置）
│   ├── popup.html / popup.css / popup.js
├── options/               # 完整设置页
│   ├── options.html / options.css / options.js
├── legacy/                # 旧版本源码归档（可分别作为独立扩展加载）
│   ├── v1.0.0-beta/
│   ├── v1.1.0-beta/
│   ├── v1.1.3-beta/
│   └── v1.1.4-beta/
├── tests/                 # jsdom 自动化验证脚本（不参与扩展运行）
└── icons/                 # 16 / 32 / 48 / 128 图标
```

---

## 开发与自测

扩展本体零依赖，纯原生 JS（MV3 + Shadow DOM）。

```bash
cd tests
npm install      # 仅测试需要 jsdom
npm test         # 172 项行为校验
```

验证覆盖：屏蔽逻辑与两种屏蔽方式、悬停展示、**真实直播楼层结构下的封面+标题合并遮蔽**、14 类分区与兜底规则、
顶部轮播横幅开关、**完全隐藏模式下空占位项的收敛与自动恢复**、顶栏不误伤、
**过大容器 / 隐藏元素安全阀（防止页面空白）**、悬浮按钮拖动与位置记忆、
弹窗 / 设置页交互、后台统计与徽标。详见 `tests/README.md`。

> 测试里的模拟 DOM 结构与尺寸（`data-w` / `data-h`）全部来自**真实浏览器 CDP 实测**，
> 包括 `.floor-card-inner > .cover-container + .pb-16.px-12 > p.title` 这种工具类结构。

---

## 常见问题

**Q：勾选了某个分区，但页面上还有该分区的内容？**
A：v1.1.4 起分区屏蔽只做**卡片级**：程序无法确认「封面 + 标题」所在的卡片时会直接跳过（宁可不屏蔽），
所以少数结构特殊的推广位可能不会被处理。如果那是首页顶部的大轮播图，请用**独立的「屏蔽首页顶部轮播横幅」开关**。

**Q：有些推广卡片不属于我看到的任何一个分区？**
A：打开「**其他推广**」兜底开关。它会捕获所有没有被上面 13 类覆盖的推广卡片（客户端下载、其它频道推广、站外链接等），且**只在该卡片没有命中具体分区时才生效**——所以关掉「直播」不会又被兜底抓回来。

**Q：页面出现空白或排版错乱怎么办？**
A：v1.1.4-beta 已经用真实浏览器（Edge + CDP）复现并修掉了这个问题的根因：把推荐流、侧边按钮容器这类**过大元素**误判成一张卡片并整体遮蔽。
现在有三重安全阀兜底——容器内还装着别的卡片、尺寸超过 1100×700 或视口面积的 15%、元素尺寸为 0，任一命中就放弃屏蔽。
若仍然出现，请在设置页打开「输出调试日志」，把 B 站页面控制台里 `[B站屏蔽助手]` 开头的日志连同页面地址一起发到 Issues。

**Q：完全隐藏模式下，页面里会出现一块块灰色/白色空盒，或者排版突然变短？**
A：这是 B 站自己的**骨架屏占位块**被"顶上来"了。B 站推荐流网格末尾放着若干只含骨架屏的空占位项，
我们隐藏掉前面的卡片后，CSS Grid 会把它们拉到前面填空。
v1.1.5-beta 起扩展会自动收敛这些空占位项（实测可见骨架屏 89 → 18），并保证不影响 B 站继续加载；
如果你在旧版本上看到这个现象，升级到 v1.1.5-beta 即可。
页面变短属于正常现象：视频被过滤掉了，内容自然变少，继续往下滚 B 站会加载新的内容。

**Q：为什么有的视频没被屏蔽？**
A：确认关键词是否被标题包含；若开启了「区分大小写」或「正则表达式」，匹配会更严格。也可打开设置页的「输出调试日志」，在 B 站页面的控制台查看命中情况。

**Q：会影响页面性能吗？**
A：扫描使用 `MutationObserver` + 180ms 防抖，只对「新增 / 被改动」的卡片做增量处理；分区识别只在开启对应开关时才运行，并带有数量与频率上限。

**Q：统计数字比实际看到的屏蔽数量多？**
A：B 站是单页应用，列表滚动与切换会让卡片重新渲染，统计为「屏蔽次数」的近似值，仅作参考。

---

## 版本

**v1.1.10-beta** · 适用于 Microsoft Edge (Chromium) 102+（`minimum_chrome_version: 102`）

### 更新日志

**v1.1.10-beta**

> 关键修复：**分区推广卡片残留的「边框 + 阴影空盒」**（就是你截图里那条淡线和白色空框）。

- **根因（真实 B 站 CSS 实测）**：分区推广卡片外面还套着一层带边框、背景和阴影的盒子——
  ```css
  .floor-card{ border:1px solid #e3e5e7; background:var(--bg1);
               box-shadow:0 0 40px rgba(0,0,0,.03); border-radius:6px; padding:12px }
  ```
  而卡片本体（`.floor-card-inner`）在里面。我们的隐藏只打在本体上，
  于是**内容没了、外层那个带边框和阴影的盒子还留着**。
- **两种隐藏模式都受影响**：保留位置模式下留下一个「空边框盒子」；前移补位模式下同样残留 —— 这也是「前移补位仍有 bug」的原因之一。
- **修复**：新增 `findCardFrame()`——从卡片向上找到「仍然只装着这一张卡片」的最外层容器（直到网格项为止），隐藏时把它一起处理：
  * **保留位置**：给它 `visibility:hidden` → 边框、背景、阴影一起消失，位置依然保留（页面不重排）
  * **前移补位**：给它 `display:none` → 整个网格项移除，不会留下空框
- 校验项 166 → 172，新增 6 项用例覆盖该场景（含真实 CSS 的边框/背景/阴影结构）
**v1.1.9-beta**

> 关键修复：**「保留原位置」模式下那个"白色空块"**。

- **修复：保留原位置时留下一个空的白色盒子**
  之前的做法是隐藏卡片的**子元素**，卡片**自身的背景 / 边框仍然可见** → 那个位置看起来像一个"空的白盒子"。
  v1.0.0-beta 之所以观感更自然，是因为它隐藏的是内部卡片、外层网格项**没有背景**，所以那个位置显示的是页面底色。
  现在改为对**卡片自身**用 `visibility: hidden`：
  * 布局盒依然占位 → 页面**不重排、不变短**，不会把 B 站末尾的空骨架占位块顶到内容中间
  * 卡片连同背景与边框一起消失 → 那个位置显示页面底色，**观感与 v1.0.0-beta 一致**
- 校验项 165 → 166，新增一条断言确保这条 CSS 规则存在（防止以后被误删）
**v1.1.8-beta**

> 本版按你的要求**把「前移补位」（移除位置）这条路径逐行审了一遍**，修掉了 5 个真实缺陷。

| # | 缺陷 | 后果 | 修复 |
| --- | --- | --- | --- |
| 1 | 找网格时只看**直接父元素** | 被隐藏的卡片若隔了一层（如命中的是 `.floor-card-inner`），整个网格的占位块都不会被收敛 → 灰块残留 | 改为向上最多 6 层找 `display:grid` 祖先 |
| 2 | 每次调用**先全部清空类再重新加** | 状态没变也触发两次样式重算，滚动/加载时抖动 | 改为"只做必要变更"的差异更新 |
| 3 | 判定空占位要求**没有 `<img>`** | B 站骨架带未加载图片时不收敛 → 灰块残留 | 改看 `naturalWidth`：图片没加载完仍算占位；一字皆无也直接算占位 |
| 4 | 只扫描网格的**直接子元素** | 嵌在 `.floor-single-card` 里的空卡片漏掉 | 增加向下扫一层 |
| 5 | 无差别隐藏"无文字无图"的网格子元素 | 可能藏掉承载高度的空容器 → 页面高度骤变、滚动跳动 | 超过 400px 的空容器改为只隐身、保留高度 |

另外把定时复核的节流从 2.5s 收紧到 1.5s，让占位项恢复更及时。

- 校验项 160 → 165，新增 5 项边界用例：带未加载图片的骨架、嵌在楼层里的空卡片、又高又空的容器、真实卡片不被误判、图片加载完成后自动恢复
**v1.1.7-beta**

> 本版根据你的线索复查了 v1.0.0-beta：**只有它的「完全隐藏」是你觉得好用的**。
> 用同一份真实 DOM 结构把两个版本跑起来逐项对比后，找到了根因。

- **根因：隐藏的目标变了**

  | 卡片类型 | v1.0.0-beta.1 | v1.1.0 起 |
  | --- | --- | --- |
  | `.feed-card` 包裹的卡片 | 隐藏 `.feed-card`（整个网格项） | 相同 |
  | **直接作为网格项的 `.bili-feed-card`** | **只隐藏内部的 `.bili-video-card`** → 网格项还在，**页面不重排** | **隐藏 `.bili-feed-card` 网格项本身** → **整个网格重排** |

  差别来自 v1.1.0 把 `.bili-feed-card` 加进了卡片选择器。而重排会带来两个现象：
  腾出的格子被 B 站末尾的**空骨架占位块**填上（内容中间出现灰色空块），并且页面整体变短（底部留白）。

- **新增开关：「完全隐藏时保留原位置」**（默认开启 = v1.0.0 行为）
  * **开启（默认）**：只隐藏卡片内容，原来的位置留空 → 页面不重排、不变短，也不会把空占位块顶上来
  * **关闭**：卡片整个从布局移除，后面的内容前移补位（会重排，此时扩展会自动收敛被顶上来的空占位块）

  面板 / 弹窗里只有切到「完全隐藏」时才会显示这个开关；设置页也可以调。
- **空占位块收敛只在「移除位置」模式下运行**（保留位置时页面不重排，本来就没有东西被顶上来）
- 校验项 160 → 165，新增 18 项用例覆盖两种隐藏行为的类名、CSS 规则与开关联动

**v1.1.6-beta**

> 本版重点复查「完全隐藏」模式，并用独立无头实例做了 A/B 对照（扩展停用 vs 完全隐藏生效）。

- **修复：从「完全隐藏」切回「整体遮蔽」时，部分卡片一直隐藏不恢复**
  根因是 `applyBlock` 的尺寸安全阀用「命中原因是否相同」做判断；完全隐藏模式下卡片是 `display:none`（尺寸为 0），
  命中词一旦变化（例如你先屏蔽「游」、之后又加了「我」），安全阀就会误判并拒绝处理，卡片再也不恢复。
  现在改为看「是否已被屏蔽过」——尺寸校验只在**首次**屏蔽时进行。
- **修复：`hasLayoutEngine()` 结果被永久缓存**
  它可能在 `body` 尚未完成渲染时首次被调用，一旦缓存为 false，尺寸安全阀整场失效。现已取消缓存。
- **排查结论（附实测证据）：完全隐藏模式下的空白块与插件无关**
  A/B 对照显示：扩展停用与完全隐藏生效两种状态下，"无文字、无已加载图片的空块"数量完全一致（都是 15 个），
  链路显示它们全部是 B 站自己的 `extension-tips-v2`，位于左上角轮播 `.vui_carousel` 的幻灯片内；
  同一环境下页面底部空白也只有 60px。
- 测试加固：统计文案改为轮询等待，连续 3 轮完整测试不再出现时序抖动
- 校验项 137 → 142；`legacy/` 新增 v1.1.5-beta 归档

**v1.1.5-beta**

> 这一版是为了修掉 **完全隐藏模式下的"白色区块"**：同样是用无头 Edge + CDP 实测定位，
> 截图 + 网格逐格扫描一起上，最终拿到确凿结论。

- **修复：完全隐藏模式下内容中间出现灰色/白色空盒**
  实测发现 B 站推荐流网格共有 48 个子元素，其中 **20 个是我们隐藏的卡片、15 个真实内容、12 个是只含骨架屏的空占位项**（排在 DOM 末尾）。
  隐藏卡片腾出格子后，CSS Grid 会把排在后面的空占位项**拉到前面填空** → 看起来就是内容中间多出一块块灰色空盒。
  扩展现在会自动收敛这些被顶上来的空占位项：普通空占位直接隐藏，`.load-more-anchor` 这类加载哨兵只做隐身、保留布局盒。
  **实测：可见骨架屏 89 → 18（剩下的都在左上角轮播块内部，属于真实内容）**，页面不再有灰色空盒
- **保证不影响加载**：实测滚动到底部后真实卡片 14 → 22、网格项 57 → 87、文档高度 1671 → 2481，B 站照常继续加载内容
- **占位项被真实内容填充后立刻自动恢复**（复核同时挂在变更防抖与定时轮询上，约 180ms 内恢复）
- **确认过的事实**：网格本身没有空洞——隐藏卡片后 CSS Grid 会正常回流（实测 45 个子元素重排，逐格扫描空洞数 = 0），
  所以"排版不正常"不是留下空位，而是上面那条占位块被顶上来
- 校验项 129 → 137；`legacy/` 新增 v1.1.4-beta 归档

**v1.1.4-beta**

- 用真实浏览器实测后重写分区识别；移除「整行板块」，改为独立的「屏蔽首页顶部轮播横幅」开关
- 修复开启某分区后整页被过滤（`palette-button-inner` 1401×808）、分区推广封面与标题分开遮蔽
- 三重安全阀：容器内含别的卡片 / 尺寸超过 1100×700 或视口 15% / 尺寸为 0，任一命中即放弃屏蔽

**v1.1.3-beta**

- 修复页面空白 / 排版错乱（**未彻底修好，v1.1.4 用真实浏览器重新定位了根因**）
- 修复「整行板块」开关误伤整页；分区类型从 9 类补到 14 类并新增「其他推广」兜底

**v1.1.0-beta**

- **修复：分区推广屏蔽无效**。改为不依赖单一 class 的通用识别（从卡片链接指向的站点反推类型）
- 整体遮蔽改为鼠标悬停自动展示；悬浮按钮可自由拖动并记忆位置

**v1.0.0-beta.1**（首个公开测试版）

- 按标题屏蔽词屏蔽视频，支持批量管理、正则、区分大小写、UP 主名称匹配
- 两种屏蔽方式：整体遮蔽 / 完全隐藏
- 分区推广屏蔽、页面内悬浮面板、深色模式适配、工具栏徽标统计

### 路线图

- [ ] 按 UP 主 / 播放量 / 时长 / 分区细分屏蔽
- [ ] 白名单与「始终显示」规则
- [ ] 屏蔽词分组与配置方案（Profile）切换
- [ ] 屏蔽日志面板（看看今天到底屏蔽了什么）

---

## 其它语言

- [English documentation](README.en.md)

---

## 授权

仓库目前未附带开源协议文件，作者保留所有权利。如需在其它项目中使用，请先通过 Issue 联系。
